fix markdown width on small screens

--- a/packages/den-crystal/src/components/dom/Flex.scss
+++ b/packages/den-crystal/src/components/dom/Flex.scss
@@ -59,6 +59,7 @@
 @include make-grid-columns();
 .Flex {
   flex: 1;
+  width: 100%;
 }
 
 .Flex__Item {
